syntax = "proto3";

package pb;

import "proto/user.proto";

option go_package="github.com/vutranhoang1411/SimpleBank/pb";

message CreateUserRequest{
    string username = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse{
    User user = 1;
}