syntax = "proto3";

package pb;

import "proto/rpc_create_user.proto";

option go_package="github.com/vutranhoang1411/SimpleBank/pb";

service SimpleBank{
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
}